log
ju., 14 de sep. de 2023 16:45:04: 
 tests:  1|8
total_score: 0/70
fc6abcf
ju., 14 de sep. de 2023 16:52:29: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
310374a
ju., 14 de sep. de 2023 17:08:00: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8150ad1
ju., 14 de sep. de 2023 17:09:45: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ce9109f
ju., 14 de sep. de 2023 17:13:15: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:97:13: error: unused variable 'result' [-Werror=unused-variable]
         int result = tree -> lower_than(tree -> current -> pair -> key, key);
             ^~~~~~
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ca1ed12
ju., 14 de sep. de 2023 17:19:12: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:107:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
79bf5a1
ju., 14 de sep. de 2023 17:20:28: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
0f64369
ju., 14 de sep. de 2023 17:20:48: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3a960cb
ju., 14 de sep. de 2023 17:25:14: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2725753
ju., 14 de sep. de 2023 17:26:48: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
07e19cb
ju., 14 de sep. de 2023 17:28:03: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
9533b12
vi., 15 de sep. de 2023 13:16:33: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:58:11: error: unused variable 'temp' [-Werror=unused-variable]
     Pair* temp = searchTreeMap(tree, key);
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5c78501
vi., 15 de sep. de 2023 13:18:34: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:59:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(temp = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
83a4540
vi., 15 de sep. de 2023 13:18:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
3b23933
vi., 15 de sep. de 2023 13:23:30: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:67:16: error: unused variable 'search' [-Werror=unused-variable]
     TreeNode * search = tree -> current;
                ^~~~~~
treemap.c:64:9: error: unused variable 'rightOrLeft' [-Werror=unused-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2cb89ae
vi., 15 de sep. de 2023 13:25:37: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:71:13: error: unused variable 'result' [-Werror=unused-variable]
         int result = tree -> lower_than(tree -> current -> pair -> key, key);;
             ^~~~~~
treemap.c:64:9: error: unused variable 'rightOrLeft' [-Werror=unused-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
88bcb99
vi., 15 de sep. de 2023 13:28:54: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:64:9: error: variable 'rightOrLeft' set but not used [-Werror=unused-but-set-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fbe5cdc
vi., 15 de sep. de 2023 13:36:07: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:64:9: error: variable 'rightOrLeft' set but not used [-Werror=unused-but-set-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e5238d7
vi., 15 de sep. de 2023 14:23:28: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:77:44: error: 'newNode' undeclared (first use in this function)
                 tree -> current -> right = newNode;
                                            ^~~~~~~
treemap.c:77:44: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:64:9: error: unused variable 'rightOrLeft' [-Werror=unused-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9808e15
vi., 15 de sep. de 2023 14:29:58: 
 treemap.c | 40 +++-------------------------------------
 1 file changed, 3 insertions(+), 37 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:68:15: error: unused variable 'search' [-Werror=unused-variable]
     TreeNode *search = tree -> current;
               ^~~~~~
treemap.c:65:9: error: unused variable 'rightOrLeft' [-Werror=unused-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e6fc6b3
vi., 15 de sep. de 2023 14:39:11: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:90:17: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
                 if(tree -> current -> left = NULL)
                 ^~
treemap.c:65:9: error: variable 'rightOrLeft' set but not used [-Werror=unused-but-set-variable]
     int rightOrLeft = 1;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e74a8ea
vi., 15 de sep. de 2023 14:42:27: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:90:17: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
                 if(tree -> current -> left = NULL)
                 ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c5d3e7a
vi., 15 de sep. de 2023 14:53:27: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
83f1d73
vi., 15 de sep. de 2023 14:55:30: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
334c6c1
vi., 15 de sep. de 2023 15:01:50: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
b7e5017
